try scrape on GitHub

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -6,5 +6,8 @@ jobs:
     steps:
       - name: check out code 🛎
         uses: actions/checkout@v2
-    # running the next step in specific container
-    # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idcontainer
+      # running the next step in specific container
+      # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idcontainer
+      - name: scrape the site 🧽
+        container: algolia/docsearch-scraper:v1.6.0
+        run: pipenv run python -m src.index
