--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -6,6 +6,15 @@ jobs:
     steps:
       - name: check out code 🛎
         uses: actions/checkout@v2
+      # when scraping the site, inject secrets as environment variables
+      # then pass their values into the Docker container using "-e" syntax
+      # and inject config.json contents as another variable
       - name: scrape the site 🧽
+        env:
+          APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
+          API_KEY: ${{ secrets.API_KEY }}
         run: |
-          docker run algolia/docsearch-scraper:v1.6.0
+          docker run \
+          -e APPLICATION_ID -e API_KEY \
+          -e CONFIG="$(cat config.json)" \
+          algolia/docsearch-scraper:v1.6.0
