--- a/config.json
+++ b/config.json
@@ -11,6 +11,16 @@
     "lvl3": ".content__default h3",
     "lvl4": ".content__default h4",
     "lvl5": ".content__default h5",
-    "text": ".content__default p, .content__default li"
+    "text": ".content__default p, .content__default li",
+    "lang": {
+      "selector": "/html/@lang",
+      "type": "xpath",
+      "global": true
+    }
+  },
+  "custom_settings": {
+    "attributesForFaceting": [
+      "lang"
+    ]
   }
 }
